// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="dd button text-button "
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Normal 1`] = `
<button
  className="dd button text-button "
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="dd button text-button bg-primary"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Primary Disabled 1`] = `
<button
  className="dd button text-button bg-primary"
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/EntityEditor Deleted Foo 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-_name"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <input
          className="dd text-body1 input"
          id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-title"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          aria-label="Clear"
          className="dd button icon-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-tags"
    >
      tags
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div>
          <input
            className="dd text-body1 input"
            id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-tags"
            onChange={[Function]}
            type="text"
            value=""
          />
          <button
            aria-label="Remove item"
            className="dd button icon-button"
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bar"
    >
      bar
    </label>
    <div
      className="dd form-control"
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          className="dd button text-button "
          id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bar"
          onClick={[Function]}
          type="button"
        >
          Not set
        </button>
        <button
          aria-label="Remove entity"
          className="dd button icon-button"
          disabled={true}
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bars"
    >
      bars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="entity-fb62be03-a0a9-4689-9987-bacee0e7692d-bars"
            onClick={[Function]}
            type="button"
          >
            Not set
          </button>
          <button
            aria-label="Remove entity"
            className="dd button icon-button"
            disabled={true}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/EntityEditor Full Foo 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <input
          className="dd text-body1 input"
          id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
          onChange={[Function]}
          type="text"
          value="Hello"
        />
        <button
          aria-label="Clear"
          className="dd button icon-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags"
    >
      tags
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div>
          <input
            className="dd text-body1 input"
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-tags"
            onChange={[Function]}
            type="text"
            value="one"
          />
          <button
            aria-label="Remove item"
            className="dd button icon-button"
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div>
          <input
            className="dd text-body1 input"
            onChange={[Function]}
            type="text"
            value="two"
          />
          <button
            aria-label="Remove item"
            className="dd button icon-button"
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div>
          <input
            className="dd text-body1 input"
            onChange={[Function]}
            type="text"
            value="three"
          />
          <button
            aria-label="Remove item"
            className="dd button icon-button"
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div>
          <input
            className="dd text-body1 input"
            onChange={[Function]}
            type="text"
            value=""
          />
          <button
            aria-label="Remove item"
            className="dd button icon-button"
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bar"
    >
      bar
    </label>
    <div
      className="dd form-control"
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          className="dd button text-button "
          id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bar"
          onClick={[Function]}
          type="button"
        >
          Bar 1
        </button>
        <button
          aria-label="Remove entity"
          className="dd button icon-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars"
    >
      bars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-bars"
            onClick={[Function]}
            type="button"
          >
            Bar 1
          </button>
          <button
            aria-label="Remove entity"
            className="dd button icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            onClick={[Function]}
            type="button"
          >
            Bar 2
          </button>
          <button
            aria-label="Remove entity"
            className="dd button icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            onClick={[Function]}
            type="button"
          >
            Not set
          </button>
          <button
            aria-label="Remove entity"
            className="dd button icon-button"
            disabled={true}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/EntityEditor New Foo 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="new-entity-123-_name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <input
          className="dd text-body1 input"
          id="new-entity-123-title"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          aria-label="Clear"
          className="dd button icon-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-tags"
    >
      tags
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div>
          <input
            className="dd text-body1 input"
            id="new-entity-123-tags"
            onChange={[Function]}
            type="text"
            value=""
          />
          <button
            aria-label="Remove item"
            className="dd button icon-button"
            onClick={[Function]}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-bar"
    >
      bar
    </label>
    <div
      className="dd form-control"
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <button
          className="dd button text-button "
          id="new-entity-123-bar"
          onClick={[Function]}
          type="button"
        >
          Not set
        </button>
        <button
          aria-label="Remove entity"
          className="dd button icon-button"
          disabled={true}
          type="button"
        >
          <span
            className="dd icon remove"
          />
        </button>
      </div>
    </div>
  </div>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-bars"
    >
      bars
    </label>
    <div
      className="dd form-control"
    >
      <div>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className="dd button text-button "
            id="new-entity-123-bars"
            onClick={[Function]}
            type="button"
          >
            Not set
          </button>
          <button
            aria-label="Remove entity"
            className="dd button icon-button"
            disabled={true}
            type="button"
          >
            <span
              className="dd icon remove"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={true}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/IconButton Disabled 1`] = `
<button
  aria-label="Remove"
  className="dd button icon-button"
  disabled={true}
  type="button"
>
  <span
    className="dd icon remove"
  />
</button>
`;

exports[`Storyshots Components/IconButton Normal 1`] = `
<button
  aria-label="Remove"
  className="dd button icon-button"
  type="button"
>
  <span
    className="dd icon remove"
  />
</button>
`;

exports[`Storyshots Components/InputSubmit Disabled 1`] = `
<input
  className="dd button text-button bg-primary"
  disabled={true}
  type="submit"
  value="Done"
/>
`;

exports[`Storyshots Components/InputSubmit Normal 1`] = `
<input
  className="dd button text-button bg-primary"
  type="submit"
  value="Done"
/>
`;
